--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "vite": "^4.5.10"
   },
   "dependencies": {
+    "@gitzjoey/feather-font": "^1.0.0",
     "@selectize/selectize": "^0.15.2",
     "@vitejs/plugin-react": "^4.2.1",
     "@vituum/vite-plugin-postcss": "^1.1.0",
