--- a/package.json
+++ b/package.json
@@ -66,8 +66,10 @@
     "jasny-bootstrap": "^4.0.0",
     "jquery": "^3.7.1",
     "jquery-filepond": "^1.0.0",
+    "jquery-loading-overlay": "^1.0.2",
     "jquery-slimscroll": "^1.3.8",
     "jquery-ui-dist": "^1.13.3",
+    "js-loading-overlay": "^1.2.0",
     "jvectormap": "^2.0.4",
     "lit": "^3.2.1",
     "morris.js06": "^0.6.9",
@@ -76,6 +78,7 @@
     "prismjs": "^1.30.0",
     "resize-observer-polyfill": "^1.5.1",
     "simplebar": "^6.2.5",
+    "spin.js": "^4.1.2",
     "summernote": "^0.9.1",
     "sweetalert2": "^11.16.0",
     "switchery": "^0.0.2",
