--- a/composer.json
+++ b/composer.json
@@ -21,5 +21,6 @@
             "email": "malikal.j4@gmail.com"
         }
     ],
-    "minimum-stability": "stable"
+    "minimum-stability": "stable",
+    "prefer-stable": true
 }
