--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "@vituum/vite-plugin-postcss": "^1.1.0",
     "alpinejs": "^3.13.3",
     "apexcharts": "^4.5.0",
+    "autonumeric": "^1.9.39",
     "babel-plugin-react-compiler": "^19.0.0-beta-bafa41b-20250307",
     "bootstrap": "^5.3.3",
     "bootstrap-datepicker": "^1.10.0",
