--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
     "icheck": "^1.0.2",
     "jasny-bootstrap": "^4.0.0",
     "jquery": "^3.7.1",
+    "jquery-datepicker": "^1.12.3",
     "jquery-filepond": "^1.0.0",
     "jquery-loading-overlay": "^1.0.2",
     "jquery-slimscroll": "^1.3.8",
