--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,8 @@
     "type": "library",
     "require": {
         "laravel/framework": "^10.48.22",
-        "laravel/tinker": "^2.8"
+        "laravel/tinker": "^2.8",
+        "fakerphp/faker": "^1.24"
     },
     "require-dev": {
         "barryvdh/laravel-debugbar": "^3.15",
@@ -21,6 +22,16 @@
             "email": "malikal.j4@gmail.com"
         }
     ],
+    "extra": {
+        "branch-alias": {
+            "dev-master": "1.0-dev"
+        },
+        "laravel": {
+            "providers": [
+                "Citadel\\Providers\\CitadelServiceProvider"
+            ]
+        }
+    },
     "minimum-stability": "stable",
     "prefer-stable": true
 }
