--- a/composer.json
+++ b/composer.json
@@ -3,7 +3,7 @@
     "description": "Citadel is laravel fullstack wrapper. Inspired by Laravel Filament",
     "type": "library",
     "require": {
-        "laravel/framework": "^10",
+        "laravel/framework": "^10.0|^11.0|^12.0",
         "laravel/tinker": "^2.8",
         "fakerphp/faker": "^1.24"
     },
