--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "firebase": "^10.13.2",
     "font-awesome": "^4.7.0",
     "icheck": "^1.0.2",
+    "inputmask": "^5.0.9",
     "jasny-bootstrap": "^4.0.0",
     "jquery": "^3.7.1",
     "jquery-datepicker": "^1.12.3",
