--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@fortawesome/fontawesome-free": "^6.7.2",
     "@rollup/plugin-inject": "^5.0.5",
     "@types/react": "^18.2.66",
+    "@vitejs/plugin-legacy": "^4.1.1",
     "@vitejs/plugin-react-refresh": "^1.3.6",
     "axios": "^1.6.1",
     "formik": "^2.4.5",
@@ -31,7 +32,7 @@
     "sass": "^1.69.7",
     "select2": "^4.1.0-rc.0",
     "typescript": "^5.4.2",
-    "vite": "^4.5.10"
+    "vite": "^4.5.14"
   },
   "dependencies": {
     "@gitzjoey/feather-font": "^1.0.0",
