--- a/package.json
+++ b/package.json
@@ -34,7 +34,6 @@
     "vite": "^4.5.14"
   },
   "dependencies": {
-    "select2": "^4.1.0-rc.0",
     "@gitzjoey/feather-font": "^1.0.0",
     "@mdi/font": "^7.4.47",
     "@selectize/selectize": "^0.15.2",
@@ -81,6 +80,7 @@
     "perfect-scrollbar": "^1.5.6",
     "prismjs": "^1.30.0",
     "resize-observer-polyfill": "^1.5.1",
+    "select2": "^4.0.13",
     "simplebar": "^6.2.5",
     "spin.js": "^4.1.2",
     "summernote": "^0.9.1",
