--- a/package.json
+++ b/package.json
@@ -70,6 +70,7 @@
     "jquery-datepicker": "^1.12.3",
     "jquery-filepond": "^1.0.0",
     "jquery-loading-overlay": "^1.0.2",
+    "jquery-migrate": "^3.5.2",
     "jquery-slimscroll": "^1.3.8",
     "jquery-ui-dist": "^1.13.3",
     "js-loading-overlay": "^1.2.0",
