--- a/package.json
+++ b/package.json
@@ -60,7 +60,12 @@
     "dragtable": "^2.0.12",
     "dropzone": "^6.0.0-beta.2",
     "feather-icons": "^4.29.2",
-    "filepond": "^4.32.6",
+    "filepond": "^4.32.8",
+    "filepond-plugin-file-validate-size": "^2.2.8",
+    "filepond-plugin-file-validate-type": "^1.2.9",
+    "filepond-plugin-get-file": "^1.1.0",
+    "filepond-plugin-image-exif-orientation": "^1.0.11",
+    "filepond-plugin-image-preview": "^4.6.12",
     "firebase": "^10.13.2",
     "font-awesome": "^4.7.0",
     "icheck": "^1.0.2",
