update git ignore

--- a/.gitignore
+++ b/.gitignore
@@ -2,7 +2,8 @@
 /node_modules
 /public/hot
 /public/build/*
-/public/build
+!/public/build/assets
+!/public/build/manifest.json
 /public/storage
 /storage/*.key
 /storage/access_logs/
